2010-02-28  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/urlwrite.cc (curl_handle::init): Don't set
	CURLOPT_USERPWD if userpwd is empty.

2010-02-28  John W. Eaton  <jwe@octave.org>

	* Makefile.am ($(srcdir)/DLD-FUNCTIONS/module.mk): New target.

	* DLD-FUNCTIONS/config-module.sh: Accept top_srcdir argument.
	Work from build directory too, not just source tree.

2010-02-28  Jaroslav Hajek  <highegg@gmail.com>

	* ov-typeinfo.h (octave_value_typeinfo::octave_value_typeinfo):
	Add missing initializers.

2010-02-28  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/conv2.cc (conv2 (const MArray<T>&, const MArray<T>&,
	Shape)): Args are now const.  Move invariant expressions outside
	of loops.  Use pointers instead of Array class indexing methods.
	(conv2 (const MArray<T>&, const MArray<T>&, const MArray<T>&, Shape)):
	Ditto.

2010-02-27  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-mat.cc (do_index_op): Use checkelem for scalar indices.
	Simplify.

2010-02-26  Jaroslav Hajek  <highegg@gmail.com>

	* src/xpow.cc: Update.
	* src/ov-base-diag.cc: Update.

2010-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/str2double.cc (single_number): New helper func.
	(extract_number): Call it instead of >> to get Inf's and NaN's
	correctly.

2010-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/str2double.cc: New source.

2010-02-19  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/qr.cc: Increase tolerance for test.

2010-02-24  Jaroslav Hajek  <highegg@gmail.com>

	* TEMPLATE-INST/Array-tc.cc: Remove Array2 instantiation.
	* DLD-FUNCTIONS/besselj.cc: Use Array instead of Array2.
	* DLD-FUNCTIONS/tril.cc: Ditto.
	* data.cc: Ditto.
	* ov-typeinfo.cc: Ditto.
	* ov-typeinfo.h: Ditto.
	* pr-output.cc: Ditto.

2010-02-23  Jaroslav Hajek  <highegg@gmail.com>

	* ov-bool-mat.h (octave_bool_matrix::octave_bool_matrix (const
	Array<bool>&)): New ctor.
	* ov-ch-mat.h (octave_char_matrix::octave_char_matrix (const
	Array<char>&)): New ctor.